# Lugaru

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
App/: CMakeLists.txt
App/include/: GameGlobals.h  Globals.h
App/include/Animation/: Skeleton.hpp
App/include/Graphic/: Decal.hpp  Sprite.hpp
App/include/Level/: Awards.hpp  Hotspot.hpp
App/include/Objects/: Person.hpp  Weapons.hpp
App/include/User/: Account.hpp
App/source/: Game.cpp  Game.hpp  GameDraw.cpp  GameGlobals.cpp  GameInitDispose.cpp  GameTick.cpp  Globals.cpp  Lugaru.aps  Tutorial.cpp  Tutorial.hpp  Version.hpp  main.cpp
App/source/Animation/: Animation.cpp  Animation.hpp  Joint.hpp  Muscle.cpp  Skeleton.cpp  Skeleton.hpp
App/source/Audio/: Sounds.hpp  openal_wrapper.cpp  openal_wrapper.hpp
App/source/Devtools/: ConsoleCmds.cpp
App/source/Environment/: Lights.cpp  Lights.hpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp
App/source/Graphic/: Decal.cpp  Decal.hpp  Models.cpp  Models.cpp~RFc06afd16.TMP  Models.hpp  Sprite.cpp  Sprite.hpp  Stereo.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  gamegl.hpp
App/source/Level/: Awards.cpp  Campaign.cpp  Campaign.hpp  Dialog.cpp  Dialog.hpp  Hotspot.cpp
App/source/Math/: Frustum.cpp  XYZ.hpp
App/source/Menu/: Menu.cpp  Menu.hpp
App/source/Objects/: Object.cpp  Object.hpp  Person.cpp  Person.hpp  PersonType.hpp  Weapons.cpp  Weapons.hpp
App/source/User/: Account.cpp  Settings.cpp  Settings.hpp
App/source/Utils/: Folders.cpp  ImageIO.cpp  ImageIO.hpp  LoadJpeg.cpp  LoadJpeg.h  LoadPng.h  Screenshot.cpp  Screenshot.h  binio.h
Audio/: CMakeLists.txt
Audio/include/Audio/: Sounds.hpp  openal_wrapper.hpp
Audio/source/: Sounds.cpp  openal_wrapper.cpp
Foundation/: CMakeLists.txt
Foundation/include/Math/: Frustum.hpp  Math.h  Vector3.hpp  XYZ.hpp
Foundation/include/Platform/: Platform.hpp
Foundation/include/Utils/: Callbacks.h  ImageIO.hpp  LoadPng.h  dirent.h  private.h
Foundation/source/Math/: Frustum.cpp  Vector3.cpp
Foundation/source/Platform/: PlatformUnix.cpp
Foundation/source/Utils/: Folders.cpp  ImageIO.cpp  LoadJpeg.cpp  LoadPng.cpp  pack.cpp  private.cpp  unpack.cpp
Game/: CMakeLists.txt
Game/include/User/: Account.hpp
Game/source/User/: Account.cpp
Graphics/: CMakeLists.txt
Graphics/include/Animation/: Animation.hpp  AnimationDefinitions.h  Joint.hpp  Muscle.hpp
Graphics/include/Graphic/: DecalType.h  Text.hpp  gamegl.hpp
Graphics/include/Objects/: PersonType.hpp
Graphics/source/Animation/: Animation.cpp  Muscle.cpp
Graphics/source/Environment/: Skybox.cpp
Graphics/source/Graphic/: Stereo.cpp  Text.cpp  Texture.cpp
Graphics/source/Objects/: PersonType.cpp
Lugaru/: CMakeLists.txt
Lugaru/source/: Game.cpp  Game.hpp  GameDraw.cpp  GameInitDispose.cpp  GameTick.cpp  Lugaru.aps  Lugaru.rc  Tutorial.cpp  Version.hpp  main.cpp
Lugaru/source/Animation/: Skeleton.cpp
Lugaru/source/Devtools/: ConsoleCmds.cpp
Lugaru/source/Environment/: Terrain.cpp
Lugaru/source/Graphic/: Models.cpp  Sprite.cpp  Sprite.hpp
Lugaru/source/Level/: Campaign.cpp  Dialog.cpp
Lugaru/source/Menu/: Menu.cpp  Menu.hpp
Lugaru/source/Objects/: Object.cpp  Object.hpp  Person.cpp  Weapons.cpp  Weapons.hpp
Lugaru/source/User/: Account.cpp  Settings.cpp
Lugaru/source/Utils/: Input.hpp  Screenshot.cpp
Source/: GameTick.cpp  main.cpp
Source/Animation/: Animation.cpp  Skeleton.cpp
Source/Audio/: Sounds.cpp  openal_wrapper.cpp
Source/Devtools/: ConsoleCmds.cpp
Source/Environment/: Skybox.cpp  Terrain.cpp
Source/Graphic/: Decal.cpp  Models.cpp  Sprite.cpp  Sprite.hpp
Source/Math/: XYZ.hpp
Source/Objects/: Weapons.cpp
Source/Platform/: Platform.hpp
Source/User/: Account.hpp
Source/Utils/: ImageIO.cpp  LoadPng.cpp
